--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               }
             },
             series: [{
-              name: 'Dynamogram',
+              name: 'Динамограмма',
               data: series_data
             }]
           }); 
