--- a/app/app.html
+++ b/app/app.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello Electron React!</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <title>Просмотрищик динамограмм</title>
     <script>
       (function() {
         if (!process.env.HOT) {
